# TENSA

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms.txt
.github/: pull_request_template.md
docs/: gui-parity-ledger.md
examples/: README.md  andes_client.py  run_fault_study.py  tensa_client.py  walkthrough.sh
paper/: paper.bib  paper.md
scripts/: check_gui_parity.py  ci-matrix.sh  gen_clone_write_index.py
server/: ANDES_VERSIONS.md  README.md  pyproject.toml
server/src/andes_app/: __init__.py  __main__.py  cli.py  mcp_server.py
server/src/andes_app/api/: __init__.py  _error_audit.md  _run_as_job.py  app.py  auth.py  error_mapping.py  schemas.py
server/src/andes_app/api/routes/: bundle.py  cases.py  clone.py  cpf.py  disturbances.py  eig.py  elements.py  jobs.py  pflow.py  pmu.py  profiles.py  reports.py  se.py  sessions.py  snapshot.py  sweep.py  tds.py  workspace.py  ws.py
server/src/andes_app/core/: bundle.py  clone_manager.py  connectivity_result.py  cpf_result.py  disturbance.py  eig_result.py  errors.py  examples.py  jobs.py  psse_writer.py  report.py  se_result.py  session.py  snapshot.py  stream.py  sweep.py  worker.py  wrapper.py
server/src/andes_app/core/clone_writers/: __init__.py  dyr_writer.py  raw_writer.py  xlsx_writer.py
server/src/andes_app/security/: __init__.py  middleware.py  paths.py  token.py
server/src/tensa/: __init__.py  __main__.py  cli.py  mcp_server.py
server/src/tensa/api/: __init__.py  _run_as_job.py  app.py  error_mapping.py  schemas.py
server/src/tensa/api/routes/: bundle.py  cases.py  clone.py  cpf.py  disturbances.py  eig.py  elements.py  jobs.py  pflow.py  pmu.py  profiles.py  reports.py  se.py  sessions.py  snapshot.py  sweep.py  tds.py  workspace.py  ws.py
server/src/tensa/core/: __init__.py  bundle.py  clone_manager.py  connectivity_result.py  cpf_result.py  eig_result.py  errors.py  examples.py  jobs.py  psse_writer.py  report.py  se_result.py  session.py  snapshot.py  stream.py  sweep.py  worker.py  wrapper.py
server/src/tensa/core/clone_writers/: __init__.py  dyr_writer.py  raw_writer.py  xlsx_writer.py
server/src/tensa/security/: __init__.py  paths.py
server/tests/acceptance/: test_abort.py  test_openapi_descriptions.py  test_tds_streaming.py  test_topology_alterable_params.py  test_walkthrough.py  test_warm_cache.py  walkthrough.sh
server/tests/integration/: test_alterable_params_api.py  test_bundle_export_api.py  test_bundle_import_api.py  test_cases_pflow_api.py  test_clone_api.py  test_clone_diff.py  test_clone_edit_flow.py  test_clone_save_as.py  test_connectivity_api.py  test_cpf_api.py  test_disturbances_replay_api.py  test_disturbances_tds_api.py  test_eig_api.py  test_elements_api.py  test_jobs_liveness.py  test_jobs_routine_mirror_api.py  test_jobs_ws_events.py  test_pflow_after_eig.py  test_pmu_api.py  test_profiles_api.py  test_reports_api.py  test_se_api.py  test_session_lifecycle.py  test_sessions_api.py  test_snapshot_api.py  test_snapshot_dill_fallback.py  test_static_serving.py  test_stream_collectors.py  test_sweep_api.py  test_sweep_job_id.py  test_tds_adaptive_api.py  test_tds_job_id.py  test_topology_controllers_api.py  test_workspace_api.py  test_wrapper.py
server/tests/unit/: test_bundle.py  test_cpf_result.py  test_dev_serve_toggles.py  test_dynamic_model_whitelist.py  test_eig_result.py  test_error_mapping.py  test_examples.py  test_genrou_validation.py  test_job_driver_reconcile.py  test_jobs.py  test_jobs_routes.py  test_paths.py  test_recovery_envelope.py  test_report.py  test_se_result.py  test_session_busy.py  test_session_worker_died.py  test_smoke.py  test_snapshot.py  test_stream_aggregator.py  test_stream_schemas.py  test_tds_batch_job_lifecycle.py  test_token.py  test_wrapper_disturbance_replay.py  test_wrapper_run_tds_integrator.py  test_ws_auth_helper.py
server/tests/unit/core/: test_clone_manager.py  test_clone_writers.py
server/tests/unit/spike/: test_clone_write_index.py
web/: .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+463 files in other folders)
